# Girth

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/ui/: piano_roll.cpp  piano_roll.hpp  ui.cpp  ui.hpp
src/vst/: vst_host.cpp  vst_host.hpp
